--- a/setup.cfg
+++ b/setup.cfg
@@ -12,8 +12,9 @@ author_email = "net@hayashi-lin.net"
 description = "Management tools of CHILDES MOR dictionaries"
 keywords = "CHILDES MOR"
 
-packages =
-    pyksnk
+package_dir =
+    =pyksnk
+packages = find:
 
 [package_data]
 pyksnk = 
