--- a/setup.cfg
+++ b/setup.cfg
@@ -12,15 +12,9 @@ author_email = "net@hayashi-lin.net"
 description = "Management tools of CHILDES MOR dictionaries"
 keywords = "CHILDES MOR"
 
-package_dir =
-    =pyksnk
-packages = find:
-
-[package_data]
-pyksnk = 
-    "*.lark"
-
 [options]
+packages = find:
+include_package_data = true
 install_requires =
     ruamel.yaml
     click
