--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ keywords = "CHILDES MOR"
 
 [options]
 packages = find:
-include_package_data = true
+# include_package_data = true
 install_requires =
     ruamel.yaml
     click
