--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ license = "MIT License"
 classifiers =
     License :: OSI Approved :: MIT License
     Programming Langugae :: Python :: 3
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
 
 author = "T. N. Hayashi"
@@ -21,6 +23,7 @@ install_requires =
     pandas
     lark-parser
     attrs
+    typing
 
 [options.entry_points]
 console_scripts =
